...
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="siA-Wd-4Mn">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="TV" image="TV_icon_default" selectedImage="TV_icon" id="Y2C-ro-t6V"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="hag-VY-fkS" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="940" y="269"/>
        </scene>
        <!--MoviesTVC-->
...
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="234"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XgX-6e-cAf" id="9fw-Dw-UmP">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="234"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movies" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vis-fo-m0V">
                                                    <rect key="frame" x="16" y="11" width="312" height="36"/>
                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="30"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dzh-Km-HVu">
...
                                        <rect key="frame" x="0.0" y="234" width="375" height="293"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cmt-sm-JGm" id="5aR-DT-ZR0">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="293"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Now" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JJh-ho-gjl">
                                                    <rect key="frame" x="16" y="5" width="343" height="24"/>
                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                    <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="yc7-Bq-pZk">
...
            <point key="canvasLocation" x="72.799999999999997" y="270.31484257871068"/>
        </scene>
        <!--Profile-->
        <scene sceneID="6jp-kM-OyP">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="64a-Wg-6Ts" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Profile" image="Profile_icon_default" selectedImage="Profile_icon" id="Ffc-RN-1nW"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5PO-kS-x19">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
