...
    @IBOutlet weak var collectionViewNow: UICollectionView!
    @IBOutlet weak var collectionViewPopular: UICollectionView!
    
    lazy var collectionViews: [UICollectionView] = [collectionViewCarousel, collectionViewNow, collectionViewPopular]
    let moviesModel: MoviesModel = MoviesModel()
    
    var carouselImages: [String] = ["cover_appletv", "cover_avengers", "cover_cooking"]
    var moviesNow: [Movie] = []
    var moviesPopular: [Movie] = []
    
    let segueMovieDetail = "segueMovieDetail"
    
    override func viewDidLoad() {
...
